--- a/index.html
+++ b/index.html
@@ -127,9 +127,7 @@
                 <div class="row about-info wide" data-animate-block>
 
                     <div class="column lg-6 md-12 about-info__pic-block">
-                        <img src="images/about-photo.jpg"
-                            srcset="images/about-photo.jpg 1x, images/about-photo@2x.jpg 2x" alt=""
-                            class="about-info__pic" data-animate-el>
+                        <img src="images/about.webp" alt="" class="about-info__pic" data-animate-el>
                     </div>
 
                     <div class="column lg-6 md-12">
@@ -580,7 +578,7 @@
                 <h3 class="text-pretitle">Contacto</h3>
                 <p class="contact-links">
                     <a href="mailto:lazzzarito@gmail.com" class="mailtoui">lazzzarito@gmail.com</a> <br>
-                    <a href="tel:+5354703466">+53 5470 3466</a>
+                    <a href="https://wa.me/+5354703466">+53 5470 3466</a>
                 </p>
             </div>
             <div class="column lg-4 md-5 tab-6 stack-on-550 contact-block">
