--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                                     Compañia y Escuela
                                 </div>
                                 <div class="folio-list__item-title">
-                                    Lizt Alfonso Dance Cuba.
+                                    Lizt Alfonso Dance Cuba
                                 </div>
                             </div>
                         </a>
@@ -302,7 +302,7 @@
                                     Organización Sin Fines de Lucro
                                 </div>
                                 <div class="folio-list__item-title">
-                                    Bienestar Animal Cuba.
+                                    Bienestar Animal Cuba
                                 </div>
                             </div>
                         </a>
@@ -327,7 +327,7 @@
                                     Joyería y Marca
                                 </div>
                                 <div class="folio-list__item-title">
-                                    Alexs Gold Joyería.
+                                    Alex's Gold Joyería
                                 </div>
                             </div>
                         </a>
@@ -352,7 +352,7 @@
                                     Servicio Financiero y de Inversiones
                                 </div>
                                 <div class="folio-list__item-title">
-                                    El Toque de Oro.
+                                    El Toque de Oro
                                 </div>
                             </div>
                         </a>
@@ -377,7 +377,7 @@
                                     Plataforma de E-commerce
                                 </div>
                                 <div class="folio-list__item-title">
-                                    Freshabana.
+                                    Freshabana
                                 </div>
                             </div>
                         </a>
@@ -402,7 +402,7 @@
                                     Plataforma Legal impulsada por IA
                                 </div>
                                 <div class="folio-list__item-title">
-                                    Despacho Larrea.
+                                    Despacho Larrea
                                 </div>
                             </div>
                         </a>
