Refactor images, update favicon, and clean up files
Moved portfolio images out of the 'images/portfolio' directory to 'images/' and updated all references in index.html. Removed unused avatar, gallery, and sample images. Updated favicon to use only favicon.ico and removed PNG favicon/icon files. Cleaned up the README with improved formatting and added skill icons. Deleted the theme_styles.html template and updated the site manifest to reference the new favicon. Set HTML language to Spanish in index.html and made minor text and copyright adjustments.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js ss-preload" lang="en">
+<html class="no-js ss-preload" lang="es">
 
 <head>
 
@@ -21,9 +21,7 @@
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/ico" sizes="512x512" href="favicon.ico">
     <link rel="manifest" href="site.webmanifest">
 
 </head>
@@ -269,7 +267,7 @@
                     <li class="folio-list__item column" data-animate-el>
                         <a class="folio-list__item-link" href="https://liztalfonso.com">
                             <div class="folio-list__item-pic">
-                                <img src="images/portfolio/lizt.webp" alt="">
+                                <img src="images/lizt.webp" alt="">
                             </div>
 
                             <div class="folio-list__item-text">
@@ -294,7 +292,7 @@
                     <li class="folio-list__item column" data-animate-el>
                         <a class="folio-list__item-link" href="https://bacuba.org/">
                             <div class="folio-list__item-pic">
-                                <img src="images/portfolio/bac.webp" alt="">
+                                <img src="images/bac.webp" alt="">
                             </div>
 
                             <div class="folio-list__item-text">
@@ -319,7 +317,7 @@
                     <li class="folio-list__item column" data-animate-el>
                         <a class="folio-list__item-link" href="https://alexsgoldjoyeria.com/">
                             <div class="folio-list__item-pic">
-                                <img src="images/portfolio/alexs.webp" alt="">
+                                <img src="images/alexs.webp" alt="">
                             </div>
 
                             <div class="folio-list__item-text">
@@ -344,7 +342,7 @@
                     <li class="folio-list__item column" data-animate-el>
                         <a class="folio-list__item-link" href="https://eltoquedeoro.com/">
                             <div class="folio-list__item-pic">
-                                <img src="images/portfolio/toque.webp" alt="">
+                                <img src="images/toque.webp" alt="">
                             </div>
 
                             <div class="folio-list__item-text">
@@ -369,7 +367,7 @@
                     <li class="folio-list__item column" data-animate-el>
                         <a class="folio-list__item-link" href="https://freshabana.com/">
                             <div class="folio-list__item-pic">
-                                <img src="images/portfolio/fresh.webp" alt="">
+                                <img src="images/fresh.webp" alt="">
                             </div>
 
                             <div class="folio-list__item-text">
@@ -394,7 +392,7 @@
                     <li class="folio-list__item column" data-animate-el>
                         <a class="folio-list__item-link" href="https://seashell-starling-913564.hostingersite.com/">
                             <div class="folio-list__item-pic">
-                                <img src="images/portfolio/larrea.webp" alt="">
+                                <img src="images/larrea.webp" alt="">
                             </div>
 
                             <div class="folio-list__item-text">
@@ -447,7 +445,7 @@
                     <li class="folio-list__item column" data-animate-el>
                         <a class="folio-list__item-link" href="#">
                             <div class="folio-list__item-pic">
-                                <img src="images/portfolio/shop.webp" alt="">
+                                <img src="images/shop.webp" alt="">
                             </div>
 
                             <div class="folio-list__item-text">
@@ -472,7 +470,7 @@
                     <li class="folio-list__item column" data-animate-el>
                         <a class="folio-list__item-link" href="#">
                             <div class="folio-list__item-pic">
-                                <img src="images/portfolio/comp.webp" alt="">
+                                <img src="images/comp.webp" alt="">
                             </div>
 
                             <div class="folio-list__item-text">
@@ -497,7 +495,7 @@
                     <li class="folio-list__item column" data-animate-el>
                         <a class="folio-list__item-link" href="#">
                             <div class="folio-list__item-pic">
-                                <img src="images/portfolio/blog.webp" alt="">
+                                <img src="images/blog.webp" alt="">
                             </div>
 
                             <div class="folio-list__item-text">
@@ -522,7 +520,7 @@
                     <li class="folio-list__item column" data-animate-el>
                         <a class="folio-list__item-link" href="#">
                             <div class="folio-list__item-pic">
-                                <img src="images/portfolio/portf.webp" alt="">
+                                <img src="images/portf.webp" alt="">
                             </div>
 
                             <div class="folio-list__item-text">
@@ -567,7 +565,7 @@
                 </h2>
 
                 <p class="h1">
-                    Ya sea que quieras comenzar un nuevo proyecto, revivir tu web o simplemente charlar, envíame
+                    Quieres comenzar un nuevo proyecto, revivir tu web o mejorarla, envíame
                     un mensaje.
                 </p>
             </div>
@@ -607,7 +605,7 @@
 
         <div class="row">
             <div class="column ss-copyright">
-                <span>© Copyright 2025</span>
+                <span>© 1azarito</span>
             </div>
 
             <div class="ss-go-top">
